--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <td></td>
              </td>
              <td rowspan="1"  align="center">   
-        <a href="file:///D:/proyecto%20final/higiene y belleza.html"><b>higiene y belleza</b></a></td><br>
+        <a href="/higiene y belleza.html"><b>higiene y belleza</b></a></td><br>
         <td colspan="1"  align="center"> 
             <a href="file:///D:/proyecto%20final/bebidas.html"><b>bebidas</b></a></td><br>
         <td colspan="1" align="center"> 
